Change Log:
v0.8
  - networkDynamic() converter function now processes edge.changes much more quickly when adding edge activity to an empty network.
v0.7
  - networkDynamic now uses (and requires) C-api exported by the network package
  - additional spell operations moved to C level
  - the networkDynamic() data conversion function as additional arguments "edge.TEA.names"" and "vertex.TEA.names" and can now load dynamic edge or vertex attributes included as extra columns to edge.spells and vertex.spells.
  - pids will now be removed by as.network.networkDynamic()
  - added read.son function for parsing SoNIA-formatted files with dynamic network data
  - added nd_test_nets dataset, a list networkDynamic objects with unusual configurations and parameters to be used for testing
  - fixed bug in spells.overlap and adding missing tests
  - added when.vertex.attrs.match and when.edge.attrs.match functions for getting times at which TEA attributes of network elements match specified values according to specified operators.
  - added nd_test_nets dataset, a list networkDynamic objects with unusual configurations and parameters to be used for testing 

v0.6.3
 - CRAN-request update to fix compatibility of test with testthat v0.8.1

v0.6.2 - Minor fix
 - CRAN-requested update to fix compatibility of test with R-trunk

v0.6 - Features & bug fixes
 New Features:
  - added get.dyads.active function to facilitate looking up the vertex ids of the heads and tails of active edges of a non-hypergraphic network
  - some refactoring of network.extract and network.collapse and get.vertex.attribute.active for speed improvements
  - reimplemented is.active in C to speed up operations on large networks with lots of time steps
  - added adjust.activity() function to transform the all of the known activity spell values in a networkDynamic object